# monospace-design-tui

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TUI-DESIGN.template.md  logo.txt  mono-tui-design-standard.md  mono-tui-rendering-reference.md  mono-tui-textual-appendix.md  mono-tui.md  monospace-design-tui-research.md  monospace-tui-bubbletea-appendix.md  monospace-tui-design-standard.md  monospace-tui-ink-appendix.md  monospace-tui-pattern-library.md  monospace-tui-ratatui-appendix.md  monospace-tui-rendering-reference.md  monospace-tui-rich-appendix.md  monospace-tui-textual-appendix.md  package-lock.json  package.json  patch_main.py
dev/: 0.2.5-scope.md  0.3.0-handoff-b.md  0.3.0-roadmap.md  0.3.0-scope.md  0.4-0.8-roadmap-design-agent.md  ARCHITECTURE-designer.md  TUI-application-UX-survey-2026-04-17.md  roadmap.md  ux-research-2026-04-17.md
mcp-server/: README.md  pyproject.toml  server.py
mono-designer/: pyproject.toml
mono-designer-verify/: go.mod  main.go  verify.go  verify_test.go
mono-designer/mono_designer/cli/: main.py
mono-designer/mono_designer/core/: linter.py  normalization.py  revision.py
mono-designer/mono_designer/models/: base.py  navigation.py  screen.py  workflow.py
mono-designer/mono_designer/projectors/: __init__.py  ascii_nav.py  ascii_screen.py  ascii_workflow.py
mono-designer/mono_designer/utils/: yaml_io.py
mono-designer/tests/: validate_models.py
mono-designer/tests/unit/: test_linter.py  test_projectors.py  test_revision.py
scripts/: build-prefilght.sh  build-preflight.sh
website/: hugo.toml
(+148 files in other folders)
