[project]
name = "mono-mcp-server"
version = "0.3.0"
description = "MCP Server for Monospace Design TUI"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    # In a real environment, this would be a local path dependency
    # "mono-designer @ file://../mono-designer"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
